unit tests fix